test/negative/return_type_mismatch.mut
# Negative: return wrong type from function

def get_name() -> str
    return 42
end
